k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: angular-frontend
  namespace: <namespace>
  labels:
    app: angular-frontend
spec:
  type: ClusterIP
  selector:
    app: angular-frontend
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
